--- a/scss/photographer.scss
+++ b/scss/photographer.scss
@@ -247,8 +247,6 @@ form textarea {
 }
 
 .lightbox-media {
-    /*width: 400px;
-    height: auto;*/
     height: 650px;
     width: auto;
 
@@ -262,10 +260,25 @@ form textarea {
     cursor: pointer;
 }
 
-// .lightbox__content-close-btn {
-//     position: absolute;
-//     top: 10px;
-//     right: 10px;
-//     cursor: pointer;
-// }
+#stickbar {
+    position: fixed;
+    bottom: 0;
+    right: 50px;
+    width: 350px;
+    /*height: 40px;*/
+    background-color: #DB8876;
+    border-radius: 5px 5px 0 0;
+    padding: 20px 40px;
+}
 
+.stickbar__content {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5em;
+    font-weight: 500;
+}
