--- a/scss/photographer.scss
+++ b/scss/photographer.scss
@@ -1,15 +1,3 @@
-#contact_modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-    background-color: rgba(196, 196, 196, 0.4);
-}
-
 .photograph-header {
     background-color: #FAFAFA;
     height: 300px;
@@ -40,8 +28,8 @@
     justify-self: center;
 
     &__media {
-        width: 350px;
-        height: 300px;
+        width: 450px;
+        height: 400px;
         overflow-clip-margin: unset;
         object-fit: cover;
         border-radius: 5px;
@@ -58,7 +46,25 @@
             font-weight: 700;
             font-size: 1.2em;
         }
+
+        &--likeBtn i {
+            cursor: pointer;
+        }
     }
+}
+
+/******** Contact modal and button *********/
+
+#contact_modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(196, 196, 196, 0.4);
 }
 
 .contact_button {
@@ -153,62 +159,74 @@ form textarea {
 	text-align: right;
 }
 
-.filter-dropdown {
+/******* Dropdown filter **********/
+
+#dropdown {
     display: flex;
     flex-direction: row;
     gap: 10px;
     margin: 60px 100px 0 100px;
     font-weight: 700;
-    font-size: 1.1em;
+    font-size: 1.125em;
 
-    &__label {
-        transform: translate(0, 8px);
+    & label {
+        margin-top: 10px;
     }
 }
 
-.select-wrapper {
-    position: relative;
-    width: 170px;
+#listbox-dropdown {
+    border: none;
     background-color: #901C1C;
     border-radius: 5px;
     color: white;
-    box-sizing: border-box;
-    overflow: hidden;
+    font-weight: 700;
+    font-size: 1.125em;
+    padding: 10px 40px 10px 10px;
+    min-width: 250px;
+    text-align: left;
     cursor: pointer;
+}
 
-    &__icon {
+.select-container {
+    position: relative;
+
+    &__icon-wrapper {
         position: absolute;
-        top: 20px;
+        top: 11px;
         right: 10px;
-        transform: translate(0, -50%);
-    }
-
-    &__selected {
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        padding: 10px 30px 10px 10px;
+        color: white;
     }
 }
 
-#options div {
-    margin: 10px;
-    cursor: pointer;
-}
+.dropdown-menu__list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #901C1C;
+    border-radius: 0 0 5px 5px;
+    color: white;
 
-#options div:nth-child(-n + 2) {
-    border-bottom: 2px solid white;
-    padding-bottom: 10px;
+    &-item {
+        padding: 10px 0;
+        margin: 0 10px;
+        cursor: pointer;
+    }
+
+    &-item:nth-child(-n+2) {
+        border-bottom: 2px solid white;
+    }
 }
 
 .rotate {
-    transform-origin: center 3px;
+    transform-origin: center 7px;
     transform: rotate(180deg);
 }
 
 .hidden {
     display: none;
 }
+
+/********** Lightbox ***********/
 
 #lightbox {
     display: none;
@@ -224,10 +242,14 @@ form textarea {
 
 .lightbox__modal {
     margin: 5%;
+    width: 90%;
+    height: 90%;
 }
 
 .lightbox__content {
     background-color: white;
+    width: 100%;
+    height: 100%;
     font-size: 40px;
     color: #901C1C;
     display: flex;
