--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ body {
     margin: 0;
 }
 
+*:focus-visible {
+    outline: 5px double darkblue;
+}
+
 .sr-only {
     border: 0;
     clip: rect(0 0 0 0);
@@ -34,6 +38,11 @@ h2 {
     font-size: 2em;
 }
 
+h3 {
+    margin: 0;
+    padding: 0;
+}
+
 p {
     margin: 0;
 }
@@ -44,11 +53,8 @@ p {
 }
 
 .photographer_section {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
     margin-top: 100px;
 }
@@ -59,7 +65,6 @@ p {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 350px;
 }
 
 .photographer_section article a {
@@ -102,5 +107,5 @@ p {
 }
 
 .grey-font {
-    color: #757575;
+    color: #575757;
 }
