--- a/scss/photographer.scss
+++ b/scss/photographer.scss
@@ -78,6 +78,11 @@
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+
+    &:hover, &:focus {
+        background-color: #DB8876;
+        color: black;
+    }
 }
 
 .modal {
@@ -103,7 +108,7 @@
 }
 
 .modal-header__content h2,
-.modal-header__content p {
+.modal-header__content h3 {
     font-size: 64px;
     font-weight: normal;
     text-align: left;
