refactoring, fix lightbox's next and previous button not using the right arrayOfMedia when a filter is applied, rename functions and variables to more explicit name

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -43,7 +43,7 @@
   font-weight: 700;
   font-size: 1.2em;
 }
-.media-card__content--likeBtn i {
+.media-card__content--likeBtn span {
   cursor: pointer;
 }
 
