--- a/scss/photographer.scss
+++ b/scss/photographer.scss
@@ -46,7 +46,7 @@
             font-size: 1.2em;
         }
 
-        &--likeBtn i {
+        &--likeBtn span {
             cursor: pointer;
         }
     }
